--- a/MainPage.css
+++ b/MainPage.css
@@ -5,6 +5,9 @@
     font-family: 'Poppins', sans-serif;
 
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: #1E1E1E;
 }
@@ -86,27 +89,19 @@ h3{
     left: 100px;
     top: 80px;
 }
-.skills{
+.Skills{
     position: relative;
-    height: 800px;
+    height: 80vh;
     width: 100%;
 }
-
-
-.Skills {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 50fr));
-    grid-gap: 20px;
-}
-
-.Skills > div {
-    text-align: center;
-    top: 30px;
+.Skills h1{
+    position: absolute;
+    left: 40%;
 }
 
 .Projects{
     position: relative;
-    height: 500px;
+    height: 100vh;
     width: 100%;
 }
 .Projects h1{
@@ -118,15 +113,34 @@ h3{
 
 .MyFinances h1{
     position: absolute;
-    color: white;
-    top: 150px;
-    left: 100px;
+    color: #8700A9;
+    top: 40%;
+    left: 750px;
+}
+.CRUD h1{
+    position: absolute;
+    color: #8700A9;
+    top: 120%;
+    left: 10%;
+}
+.CRUD h3{
+    position: absolute;
+    align-items: center;
+
 }
 .MyFinances img {
     position: absolute;
     border-radius: 5px;
-    top: 50%; /* Ajusta a posição em relação ao contêiner pai */
+    top: 40%; /* Ajusta a posição em relação ao contêiner pai */
     left: 5%; /* Ajusta a posição em relação ao contêiner pai */
+    width: 50%; /* Define a largura em relação ao contêiner pai */
+    max-height: 60vh; /* Limita a altura máxima em relação à altura da tela */
+}
+.CRUD img {
+    position: absolute;
+    border-radius: 5px;
+    top: 120%; /* Ajusta a posição em relação ao contêiner pai */
+    left: 40%; /* Ajusta a posição em relação ao contêiner pai */
     width: 50%; /* Define a largura em relação ao contêiner pai */
     max-height: 60vh; /* Limita a altura máxima em relação à altura da tela */
 }
@@ -135,8 +149,18 @@ h3{
     position: absolute;
     height: 200px;
     width: 35%;
-    top: 70%;
+    top: 60%;
     left: 40%;
+    background-color: #8700A9;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.Roxo2{
+    position: absolute;
+    height: 150px;
+    width: 35%;
+    top: 128%;
+    left: 10%;
     background-color: #8700A9;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -147,13 +171,19 @@ h3{
     left: 20px;
     top: 20px;
 }
+.Roxo2 h3{
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
 .tools ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     position: absolute;
     left: 55%;
-    top: 110%;
+    top:55%;
+    font-weight: bolder;
 }
 
 .tools li {
@@ -162,14 +192,209 @@ h3{
     color: white;
 }
 
+.tools2 ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    left: 28%;
+    top:122%;
+    font-weight: bolder;
+}
+
+.tools2 li {
+    display: inline-block;
+    margin-right: 10px; 
+    color: white;
+}
+
+
 .Contacts{
     position: relative;
-    height: 500px;
+    height: 100vh;
     width: 100%;
+    top: 400px;
 }
 .Contacts h1{
     position: absolute;
-    top: 50px;
-    left: 100px;
+    top: 20%;
+    font-size: 50px;
+    left: 20%;
+}
+.Contacts h3{
+    position: absolute;
+    top: 40%;
+    left: 200px;
+    color: rgb(190, 190, 190);
+}
+.Contacts button{
+    position: relative;
+    top: 50%;
+    left: 40%;
+    font-weight: bolder;
+    height: 50px;
+    width: 200px;
+    border: none;
+    background-color: #8700A9;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.Contacts a{
+    position: relative;
+    top: 20%;
+    color: rgb(223, 223, 223);
 }
 
+.container{
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    grid-gap: 1rem;
+    padding: 1rem 80px;
+    font-size: 1.2rem;
+    top: 20%;
+}
+.img{
+    width: 90px;
+    height: 90px;
+    position: relative;
+    border-radius: 50%;
+    background-color: rgb(41, 41, 41);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    
+}
+.skill-box{
+    padding: 1rem;
+    color: #272727;
+
+}
+.skill-title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+.skill-icon{
+    width: 50px;
+}
+.linkgithub{
+    position: absolute;
+    top: 580px;
+    left: 800px;
+}
+.linkgithub2{
+    position: absolute;
+    top: 750px;
+    left: 20%;
+}
+
+.Other{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    top: 500px;
+    background: #272727;
+}
+.Other h1{
+    position: absolute;
+    left: 30%;
+    font-size: 25px;
+    top: 10%;
+
+}
+.Other a{
+    position: absolute;
+    top: 17%;
+    left: 40%;
+    text-decoration: none;
+    color: #8700A9;
+}
+.container2{
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    grid-gap: 1rem;
+    padding: 1rem 80px;
+    font-size: 1.2rem;
+    top: 20%;
+}
+.Colum1{
+    height: 300px;
+    width: 400px;
+    background-color: #1E1E1E;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.Colum2{
+    height: 300px;
+    width: 400px;
+    background-color: #1E1E1E;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.container2 ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px;
+    position: absolute;
+    font-size: 15px;
+    font-weight: bolder;
+    top: 80%;
+}
+
+.container2 li {
+    display: inline-block;
+    margin-right: 10px; 
+    color: white;
+}
+
+.Colum1 h1{
+    position: absolute;
+    left: 10%;
+    top: 30%;
+}
+.Colum1 p{
+    position: absolute;
+    left: 10%;
+    top: 50%;
+}
+.Colum1 img{
+    position: absolute;
+    left: 10%;
+    top: 10%;
+}
+.Colum2 h1{
+    position: absolute;
+    left: 40%;
+    top: 30%;
+}
+.Colum2 p{
+    position: absolute;
+    left: 40%;
+    top: 50%;
+}
+.Colum2 img{
+    position: absolute;
+    left: 40%;
+    top: 10%;
+}
+.Colum1 a{
+    position: absolute;
+    top: 10%;
+    left: 30%;
+}
+.Colum2 a{
+    position: absolute;
+    top: 10%;
+    left: 60%;
+}
