--- a/MainPage.css
+++ b/MainPage.css
@@ -106,32 +106,64 @@ h3{
 }
 .Projects h1{
     position: absolute;
-    top: 80px;
+    top: 10%;
     left: 500px;
 }
 
+.MyFinances{
+    position: absolute;
+    height: 400px;
+    left: 20%;
+    width: 900px;
+    border-radius: 10px;
+    top: 20%;
+    background-color: #8700A9;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}
 
 .MyFinances h1{
     position: absolute;
-    color: #8700A9;
-    top: 40%;
-    left: 750px;
+    color: #ffffff;
+    top: 10%;
+    left: 65%;
+    font-weight: bolder;
+}
+.MyFinances p{
+    color: rgb(223, 223, 223);
+    position: absolute;
+    left: 60%;
+    top: 25%;
+    font-weight: bold;
+}
+.CRUD{
+    position: absolute;
+    height: 400px;
+    left: 20%;
+    width: 900px;
+    border-radius: 10px;
+    top: 90%;
+    background-color: #8700A9;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 .CRUD h1{
     position: absolute;
-    color: #8700A9;
-    top: 120%;
+    color: #fdfdfd;
+    top: 10%;
     left: 10%;
 }
-.CRUD h3{
+.CRUD p{
     position: absolute;
     align-items: center;
+    top: 20%;
+    left: 10%;
 
 }
 .MyFinances img {
     position: absolute;
     border-radius: 5px;
-    top: 40%; /* Ajusta a posição em relação ao contêiner pai */
+    top: 20%; /* Ajusta a posição em relação ao contêiner pai */
     left: 5%; /* Ajusta a posição em relação ao contêiner pai */
     width: 50%; /* Define a largura em relação ao contêiner pai */
     max-height: 60vh; /* Limita a altura máxima em relação à altura da tela */
@@ -139,49 +171,20 @@ h3{
 .CRUD img {
     position: absolute;
     border-radius: 5px;
-    top: 120%; /* Ajusta a posição em relação ao contêiner pai */
+    top: 40%; /* Ajusta a posição em relação ao contêiner pai */
     left: 40%; /* Ajusta a posição em relação ao contêiner pai */
     width: 50%; /* Define a largura em relação ao contêiner pai */
     max-height: 60vh; /* Limita a altura máxima em relação à altura da tela */
 }
 
-.Roxo{
-    position: absolute;
-    height: 200px;
-    width: 35%;
-    top: 60%;
-    left: 40%;
-    background-color: #8700A9;
-    border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.Roxo2{
-    position: absolute;
-    height: 150px;
-    width: 35%;
-    top: 128%;
-    left: 10%;
-    background-color: #8700A9;
-    border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
 
-.Roxo h3{
-    position: absolute;
-    left: 20px;
-    top: 20px;
-}
-.Roxo2 h3{
-    position: absolute;
-    left: 20px;
-    top: 20px;
-}
+
 .tools ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     position: absolute;
-    left: 55%;
+    left: 60%;
     top:55%;
     font-weight: bolder;
 }
@@ -197,8 +200,8 @@ h3{
     padding: 0;
     margin: 0;
     position: absolute;
-    left: 28%;
-    top:122%;
+    left: 10%;
+    top:60%;
     font-weight: bolder;
 }
 
@@ -249,7 +252,7 @@ h3{
 .container{
     position: relative;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -285,15 +288,42 @@ h3{
 .skill-icon{
     width: 50px;
 }
-.linkgithub{
+
+.linkgithub button{
     position: absolute;
-    top: 580px;
-    left: 800px;
+    top: 70%;
+    left: 60%;
+    height: 50px;
+    width: 120px;
+    background-color: white;
+    border: none;
+    font-weight: bolder;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: background-color 0.4s;
 }
-.linkgithub2{
+.linkgithub button:hover {
+    background-color: purple; /* Altera a cor de fundo para roxo quando o cursor passa sobre o botão */
+}
+
+
+.linkgithub2 button{
     position: absolute;
-    top: 750px;
-    left: 20%;
+    top: 70%;
+    left: 10%;
+    height: 50px;
+    width: 120px;
+    background-color: white;
+    border: none;
+    font-weight: bolder;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: background-color 0.4s;
+}
+.linkgithub2 button:hover {
+    background-color: purple; /* Altera a cor de fundo para roxo quando o cursor passa sobre o botão */
 }
 
 .Other{
@@ -305,29 +335,28 @@ h3{
 }
 .Other h1{
     position: absolute;
-    left: 30%;
+    left: 10%;
     font-size: 25px;
-    top: 10%;
-
+    top: 5%;  
 }
 .Other a{
     position: absolute;
-    top: 17%;
-    left: 40%;
+    top: 10%;
+    left: 20%;
     text-decoration: none;
     color: #8700A9;
 }
 .container2{
     position: relative;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     align-items: center;
     text-align: center;
     grid-gap: 1rem;
     padding: 1rem 80px;
     font-size: 1.2rem;
-    top: 20%;
+    top: 40%;
 }
 .Colum1{
     height: 300px;
@@ -360,17 +389,17 @@ h3{
 
 .Colum1 h1{
     position: absolute;
-    left: 10%;
+    left: 8%;
     top: 30%;
 }
 .Colum1 p{
     position: absolute;
-    left: 10%;
+    left: 8%;
     top: 50%;
 }
 .Colum1 img{
     position: absolute;
-    left: 10%;
+    left: 8%;
     top: 10%;
 }
 .Colum2 h1{
