--- a/angelo/src/app/globals.css
+++ b/angelo/src/app/globals.css
@@ -6,15 +6,15 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start: #060013;
   --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 6, 0, 19;
+    --background-end-rgb: 6, 0, 19;
     --font-family: 'Poppins', sans-serif;
   }
 }
