--- a/angelo/src/app/globals.css
+++ b/angelo/src/app/globals.css
@@ -34,3 +34,21 @@ body {
   text-align: justify;
   text-justify: distribute;
 }
+
+.typing {
+  display: inline;
+  border-right: 2px solid #5007C8;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typing 2s steps(30, end), blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0; }
+  to { width: 14em; }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent; }
+  50% { border-color: #5007C8; }
+}
